fix: inline radio buttons on mobile devices for a dense conversion (#22)

--- a/cicero/pkg/tcp/routes/css/input.css
+++ b/cicero/pkg/tcp/routes/css/input.css
@@ -28,7 +28,7 @@
     @apply cursor-pointer;
   }
   label > p {
-    @apply px-4;
+    @apply sm:px-4;
   }
   main {
     @apply lg:ml-96;
