--- a/cicero/pkg/tcp/routes/css/output.css
+++ b/cicero/pkg/tcp/routes/css/output.css
@@ -214,7 +214,9 @@
     cursor: pointer;
   }
   label > p {
-    padding-inline: calc(var(--spacing) * 4);
+    @media (width >= 40rem) {
+      padding-inline: calc(var(--spacing) * 4);
+    }
   }
   main {
     @media (width >= 64rem) {
